--- a/css/style.css
+++ b/css/style.css
@@ -1289,9 +1289,9 @@ button.grey:hover,
 }
 
 .images_3_of_2 img {
-	height: 302px;
+	height: 300px;
 	max-width: 100%;
-	width: 100%;
+	/* width: 100%; */
 }
 
 .span_3_of_2 h2 {
