--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,12 @@
+:root{	
+	--color1 	 : #70389C;
+	--color1_1 	 : #602D8D;
+	--font-red   : #CC3636;
+	--lightblack : #414045;
+	--darkblack  : #2f2e33;
+		
+}
+
 /* dCodes Framework:(c) TemplateAccess */
 ul.dc_mm-orange,ul.dc_mm-orange li{
 	border:none;
@@ -5,13 +14,13 @@ ul.dc_mm-orange,ul.dc_mm-orange li{
 }
 ul.dc_mm-orange{
 	background: #414045; 
-	background: -moz-linear-gradient(top,  #414045 55%, #2f2e33 100%); 
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(55%,#414045), color-stop(100%,#2f2e33));
-	background: -webkit-linear-gradient(top,  #414045 55%,#2f2e33 100%); 
-	background: -o-linear-gradient(top,  #414045 55%,#2f2e33 100%); 
-	background: -ms-linear-gradient(top,  #414045 55%,#2f2e33 100%); 
-	background: linear-gradient(to bottom,  #414045 55%,#2f2e33 100%); 
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#414045', endColorstr='#2f2e33',GradientType=0 );
+	background: -moz-linear-gradient(top,  var(--lightblack) 55%, var(--darkblack) 100%); 
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(55%,var(--lightblack)), color-stop(100%,var(--darkblack)));
+	background: -webkit-linear-gradient(top,  var(--lightblack) 55%,var(--darkblack) 100%); 
+	background: -o-linear-gradient(top,  var(--lightblack) 55%,var(--darkblack) 100%); 
+	background: -ms-linear-gradient(top,  var(--lightblack) 55%,var(--darkblack) 100%); 
+	background: linear-gradient(to bottom,  var(--lightblack) 55%,var(--darkblack) 100%); 
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='var(--lightblack)', endColorstr='var(--darkblack)',GradientType=0 );
 	font:normal 13px Arial,sans-serif;
 	padding:0;
 	position:relative;
@@ -41,7 +50,7 @@ ul.dc_mm-orange li a{
 	text-shadow:1px 1px 1px #000;
 	text-transform:uppercase;
 	font-family:'Doppio One', sans-serif;
-	border-left:2px groove #636363;
+	/* border-left:2px groove #636363; */
 }
 ul.dc_mm-orange li a.dc-mega{
 	position:relative;
@@ -57,11 +66,13 @@ ul.dc_mm-orange li a .dc-mega-icon{
 }
 ul.dc_mm-orange li.mega-hover a,ul.dc_mm-orange li a:hover{
 	color: #FFF;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#70389c',endColorstr='#602d8d');
-	background: -webkit-gradient(linear,left top,left bottom,from(#70389C),to(#602D8D));
-	background: -moz-linear-gradient(top,#70389C,#602D8D);
-	background: -o-linear-gradient(top,#70389C,#602D8D);
-	background: -ms-linear-gradient(top,#70389C,#602D8D);
+	background: -webkit-gradient(linear,left top,left bottom, color-stop(55%,var(--color1)), color-stop(100%,var(--color1_1)));
+	background: -moz-linear-gradient(top,var(--color1) 55%,var(--color1_1) 100%);
+	background: -o-linear-gradient(top,var(--color1) 55%,var(--color1_1) 100%);
+	background: -ms-linear-gradient(top,var(--color1) 55%,var(--color1_1) 100%);
+	background: linear-gradient(top, var(--color1) 55%,var(--color1_1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='var(--color1)',endColorstr='var(--color1_1)');
+	background: var(--color1);
 }
 ul.dc_mm-orange li .sub-container{
 	background:#F0F0F0;
@@ -108,7 +119,7 @@ ul.dc_mm-orange li .sub a{
 	text-shadow:none;
 }
 ul.dc_mm-orange li .sub li.mega-hdr a.mega-hdr-a{
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#70389c',endColorstr='#602d8d');
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#70389C',endColorstr='#602D8D');
 	background: -webkit-gradient(linear,left top,left bottom,from(#70389C),to(#602D8D));
 	background: -moz-linear-gradient(top,#70389C,#602D8D);
 	background: -o-linear-gradient(top,#70389C,#602D8D);
