--- a/css/style.css
+++ b/css/style.css
@@ -494,14 +494,18 @@ input[type="number"] {
 	border-radius: 3px;
 }
 
-.login_panel input[type="text"],
-.login_panel input[type="password"] {
+.login_panel input{
 	font-size: 12px;
 	color: #B3B1B1;
 	padding: 8px;
 	outline: none;
 	margin: 6px 0;
 	width: 92%;
+}
+
+.login_panel input:focus{
+	color: var(--color1);
+	outline: 1px solid var(--color1);
 }
 
 .login_panel form {
