--- a/css/style.css
+++ b/css/style.css
@@ -1963,6 +1963,19 @@ table.tblone img {
 	width: 30px;
 }
 
+.save-btn{
+	/* display: inline-block; */
+	padding: 10px 50px;
+	text-transform: uppercase;
+	font-size: 16px;
+	cursor: pointer;
+}
+
+.save-btn:hover{
+	background: var(--color1);
+	color: white;
+}
+
 .shopping {
 	margin-top: 30px;
 }
