--- a/admin/css/layout.css
+++ b/admin/css/layout.css
@@ -2,6 +2,15 @@
 -----------------------------------------------
 Grey Box Method - Layout CSS
 ----------------------------------------------- */
+:root{	
+	--color1 	 : #70389C;
+	--color1_1 	 : #602D8D;
+	--font-red   : #CC3636;
+	--lightblack : #414045;
+	--darkblack  : #2f2e33;
+		
+}
+
 
 body {
 	background: #fff none repeat scroll 0 0;
@@ -446,6 +455,20 @@ ul.section li.current>a.active:hover {
 
 /* table
 ----------------------------------------------- */
+td a.edit{
+	color: var(--color1);
+}
+
+td a.del {
+	color: var(--font-red);
+}
+
+td a.edit:hover,a.del:hover {
+	color: #666;
+}
+
+
+
 table.form {
 	width: 100%;
 }
@@ -467,19 +490,29 @@ table.form .col2 {}
 table.form input,
 table.form select {
 	font-size: 15px;
-	padding: 4px 4px 5px 4px;
+	padding: 6px 6px 7px 6px;
 	border-top: 1px solid #b3b3b3;
 	border-left: 1px solid #b3b3b3;
 	border-right: 1px solid #eaeaea;
 	border-bottom: 1px solid #eaeaea;
+	border-radius: 3px;
 }
 
 table.form input[type="submit"] {
-	border: 1px solid #ddd;
-	color: #444;
+	/* border: 1px solid #ddd; */
+	color: #fff;
+	background: var(--color1);
 	cursor: pointer;
 	font-size: 20px;
-	padding: 2px 10px;
+	font-weight: 500;
+	padding: 5px 12px;
+	border-radius: 3px;
+}
+
+table.form input[type="submit"]:hover {
+	/* border: 1px solid #ddd; */
+	color: var(--color1);
+	background:#fff ;
 }
 
 input.mini {
@@ -716,7 +749,7 @@ label.error {
 	font-weight: bold;
 	text-shadow: 1px 1px 0px rgba(27, 27, 27, 0.4);
 	;
-	filter: dropshadow(color=#1b1b1b, offx=1, offy=1)
+	filter: dropshadow(color=#1b1b1b, offx=1, offy=1);
 		/* IE */
 		-moz-border-radius: 4px;
 	/* Firefox */
