--- a/css/style.css
+++ b/css/style.css
@@ -419,6 +419,7 @@ input[type="number"] {
 	padding: 5px 20px;
 	text-align: center;
 	/* width: 144px; */
+	transition: all 0.5s ease;
 }
 
 .login a:hover{
