--- a/css/style.css
+++ b/css/style.css
@@ -739,6 +739,9 @@ button.grey:hover,
 	clear: both;
 	padding: 0px;
 	margin: 0px;
+	display: flex;
+	flex-wrap: wrap;
+	/* justify-content: space-between; */
 }
 
 .group:before,
@@ -948,14 +951,21 @@ button.grey:hover,
 }
 
 .images_1_of_4 {
-	width: 20.8%;
-	padding: 1.5%;
+	/* width: 20.8%; */
+	padding: 1em;
 	text-align: center;
 	position: relative;
+	height: 325px;
+	width: 190px;
+	margin: 5px;
+}
+
+.images_1_of_4:hover {
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
 
 .images_1_of_4 img {
-	height: 235px;
+	height: 150px;
 	max-width: 100%;
 }
 
@@ -1003,21 +1013,18 @@ button.grey:hover,
 
 .images_1_of_4 .button {
 	float: left;
-	line-height: 1.9em;
-	margin-top: 0.3em;
 	width: 100%;
-}
-
-.images_1_of_4 .button a {
-	padding: 7px 20px;
-	font-size: 0.8em;
+	position: absolute;
+	bottom: 5px;
+	left: 50%;
+	right: 50%;
+	transform: translate(-50%,-50%);
 }
 
 .images_1_of_4 .button a {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	line-height: 15px;
-	text-transform: none;
+	padding: .5em 2em;
+	font-size: 0.8em;
 	color: #737370;
 	text-decoration: none !important;
 	background: url(../images/button-bg.png) repeat-x 0 0 #E8E8E8;
@@ -1027,7 +1034,6 @@ button.grey:hover,
 	border-top: 1px solid #E0E0E0 !important;
 	border-bottom: 1px solid #9C9C9C !important;
 	cursor: pointer !important;
-	margin: 0 2px;
 	border-radius: 2px;
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
