--- a/css/style.css
+++ b/css/style.css
@@ -1056,6 +1056,40 @@ button.grey:hover,
 	padding: 7px 5px 7px 38px;
 }
 
+
+
+/* Payment Page */
+
+.payment{
+	/* width: 500px; */
+	/* min-height: 200px; */
+	text-align: center;
+	border: 1px solid #ddd;
+	margin: 0 auto;
+	padding: 50px;
+}
+
+.payment h2 {
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 40px;
+	padding-bottom: 10px;
+}
+
+.payment .button_payment{
+	margin: 4em 0;
+}
+
+.payment .button_payment .continue{
+	margin: 0 1em;
+}
+
+.payment .back{
+	margin: 1em;
+}
+
+
+
+
 /*** Footer ***/
 .wrapper {
 	width: 78%;
@@ -1099,7 +1133,7 @@ button.grey:hover,
 .col_1_of_4 {
 	display: block;
 	float: left;
-	margin: 0% 0 1% 1.6%;
+	margin: 0% 0 0 1.6%;
 	border-right: 2px groove #555;
 }
 
@@ -1114,7 +1148,7 @@ button.grey:hover,
 
 .span_1_of_4 {
 	width: 20.5%;
-	padding: 1.5%;
+	padding: 1.5% 1.5% 0 1.5%;
 }
 
 .span_1_of_4 h4 {
@@ -1200,7 +1234,7 @@ button.grey:hover,
 
 .copy_right {
 	text-align: center;
-	padding: 15px 0;
+	padding: 8px 0;
 }
 
 .copy_right p {
@@ -1996,7 +2030,7 @@ table.tblone img {
 	width: 610px;
 }
 
-.shopping .continue{
+.continue{
 	margin: 5em;
 	padding: 1em 2em;
 	background: var(--color1);
@@ -2010,19 +2044,18 @@ table.tblone img {
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-.shopping .continue:hover{
+.continue:hover{
 	background: transparent;
 	outline: 2px solid var(--color1);
 	color: var(--color1);
-	
 }
 
-.shopping .checkout{
+.checkout{
 	background: rgb(255, 123, 0);
 	color: #fff;
 }
 
-.shopping .checkout:hover{
+.checkout:hover{
 	background: transparent;
 	outline: 2px solid rgb(255, 123, 0);
 	color: rgb(255, 123, 0);
@@ -2040,6 +2073,12 @@ table.tblone img {
 .shopright img {
 	width: 270px;
 	outline: none
+}
+
+.btn_grey{
+	background: #2f2e33;
+	color: var(--font-red);
+	font-weight: 800;
 }
 
 .contact-form {
