--- a/admin/css/nav.css
+++ b/admin/css/nav.css
@@ -87,6 +87,17 @@ ul.nav {
   
 }
 
+.active{
+	background:#fff;
+	color: var(--theme-color1);
+	
+}
+
+.active:hover{
+	color:#fff;
+	background: var(--theme-color1);
+}
+
 ul.main li {
   position:relative;
   top:0;
