Category & Product page updated

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,12 +4,12 @@
     justify-content: center;
 }
 
-.flex-direction{
+/* .flex-direction{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
-.j_c_center{
+/* .j_c_center{
     justify-content: center;
-}
+} */
