--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,7 @@ button,
 	border-radius: 3px;
 	cursor: pointer;
 	box-sizing: border-box;
+	transition: all 250ms ease-in;
 }
 
 .grey {
@@ -2114,28 +2115,28 @@ table.tblone img {
 .contact-form {
 	position: relative;
 	padding-bottom: 30px;
+	
 }
 
 .contact-form div {
 	padding: 5px 0;
+	
 }
 
 .contact-form span {
 	display: block;
 	font-size: 0.8125em;
-	color: #757575;
+	/* color: #757575; */
 	padding-bottom: 5px;
 	font-family: verdana, arial, helvetica, helve, sans-serif;
 }
 
-.contact-form input[type="text"],
-.contact-form textarea {
-	padding: 8px;
+.contact-form .form_input {
+	padding: 10px;
 	display: block;
 	width: 98%;
 	background: #fcfcfc;
 	border: none;
-	outline: none;
 	color: #464646;
 	font-size: 0.8125em;
 	font-family: Arial, Helvetica, sans-serif;
@@ -2144,20 +2145,22 @@ table.tblone img {
 	-moz-box-shadow: inset 0px 0px 3px #999;
 	-o-box-shadow: inset 0px 0px 3px #999;
 	-webkit-appearance: none;
+	border-radius: 3px;
+}
+
+.contact-form .form_input:focus{
+	outline: 1px solid var(--color1);
 }
 
 .contact-form textarea {
 	resize: none;
-	height: 120px;
+	min-height: 100px;
 }
 
-.contact-form input[type="submit"] {
-	padding: 7px 25px;
+/* .contact-form input[type="submit"] {
+	padding: 10px 25px;
 	cursor: pointer;
-	background: #FFF url(../images/large-button-overlay.png);
 	font-family: Arial, Helvetica, sans-serif;
-	position: absolute;
-	right: 0;
 	border: 1px solid #ccc;
 	color: #555 !important;
 	font-size: 1em;
@@ -2168,11 +2171,12 @@ table.tblone img {
 	background-color: #EEE;
 	border-color: #B8B5B5;
 	color: #444 !important;
-}
+} 
 
 .contact-form input[type="submit"]:active {
 	background-color: #FFF;
-}
+} 
+*/
 
 .company_address p {
 	font-size: 0.8125em;
